[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Gradient_out.png" type="Texture" id=1]
[ext_resource path="res://src/lights/Realm_Indicator.gd" type="Script" id=2]

[node name="Realm_Indicator" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Spirit_Realm_Glow" type="Light2D" parent="."]
visible = false
texture = ExtResource( 1 )
texture_scale = 1.1
color = Color( 0.337255, 0, 1, 1 )
mode = 2

[node name="Living_Realm_Glow" type="Light2D" parent="."]
visible = false
texture = ExtResource( 1 )
